fdo#50633 IDE: select current module in Object Catalog on open

Change-Id: Ieea731b0ed8eefdab616ed1f778b445aae14191c